--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nike - Your Favourite Brand
-  </title>
+  <title>Nike - Best You Can Find</title>
 </head>
 
 <body>
